--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>hola en esta aplicacion veremos los multiplos de 3</h1>
+<h1>hola mundo 2</h1>
 <div class="container">
     <script>
         var conut3=0;
