--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h3>hola</h3>
 <h1>hola en esta aplicacion veremos los multiplos de 3</h1>
-<h1>hola mundo 2s</h1>
+<h2>hola mundo 2s</h2>
+<h3>Equipo JACM</h3>
 <div class="container">
     <script>
         var conut3=0;
